// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`organisms/Timeline Default play-test 1`] = `
<style>
  :root{
      --animation-rhythm: 1s;
      box-sizing: border-box;
      interpolate-size: allow-keywords;
  }

  @media (prefers-reduced-motion: reduce) {
    :root {
        --animation-rhythm: 0s;
    }
  }
  
  * {
    box-sizing: border-box;
  }
</style>
<div style="font-family: &quot;Inter Variable&quot;, Inter, system-ui, sans-serif;">
  <section data-testid="Timeline">
    <div class="vertical-timeline vertical-timeline--animate vertical-timeline--two-columns">
      <div class="vertical-timeline-element"
           data-testid="TimelineElement"
      >
        <div id
             class="vertical-timeline-element"
        >
          <span class="vertical-timeline-element-icon bounce-in">
            <img alt="first logo"
                 loading="lazy"
                 width="46"
                 height="42"
                 decoding="async"
                 data-nimg="1"
                 class="TimelineElement_logo___ayQu"
                 srcset="/static/media/entities/assets/jagex-logo.svg?w=48&amp;q=75 1x, /static/media/entities/assets/jagex-logo.svg?w=96&amp;q=75 2x"
                 src="/static/media/entities/assets/jagex-logo.svg?w=96&amp;q=75"
                 style="color: transparent;"
            >
          </span>
          <div class="vertical-timeline-element-content bounce-in">
            <div class="vertical-timeline-element-content-arrow">
            </div>
            abc
            <span class="vertical-timeline-element-date">
              2011 - present
            </span>
          </div>
        </div>
      </div>
      <div class="vertical-timeline-element"
           data-testid="TimelineElement"
      >
        <div id
             class="vertical-timeline-element"
        >
          <span class="vertical-timeline-element-icon bounce-in">
            <img alt="second logo"
                 loading="lazy"
                 width="46"
                 height="42"
                 decoding="async"
                 data-nimg="1"
                 class="TimelineElement_logo___ayQu"
                 srcset="/static/media/entities/assets/jagex-logo.svg?w=48&amp;q=75 1x, /static/media/entities/assets/jagex-logo.svg?w=96&amp;q=75 2x"
                 src="/static/media/entities/assets/jagex-logo.svg?w=96&amp;q=75"
                 style="color: transparent;"
            >
          </span>
          <div class="vertical-timeline-element-content bounce-in">
            <div class="vertical-timeline-element-content-arrow">
            </div>
            def
            <span class="vertical-timeline-element-date">
              2010
            </span>
          </div>
        </div>
      </div>
      <div class="vertical-timeline-element"
           data-testid="TimelineElement"
      >
        <div id
             class="vertical-timeline-element"
        >
          <span class="vertical-timeline-element-icon bounce-in">
            <img alt="third logo"
                 loading="lazy"
                 width="46"
                 height="42"
                 decoding="async"
                 data-nimg="1"
                 class="TimelineElement_logo___ayQu"
                 srcset="/static/media/entities/assets/jagex-logo.svg?w=48&amp;q=75 1x, /static/media/entities/assets/jagex-logo.svg?w=96&amp;q=75 2x"
                 src="/static/media/entities/assets/jagex-logo.svg?w=96&amp;q=75"
                 style="color: transparent;"
            >
          </span>
          <div class="vertical-timeline-element-content bounce-in">
            <div class="vertical-timeline-element-content-arrow">
            </div>
            ghi
            <span class="vertical-timeline-element-date">
              2009
            </span>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`organisms/Timeline Default smoke-test 1`] = `
<section class="sc-braxZu">
  <div class="vertical-timeline vertical-timeline--animate vertical-timeline--two-columns">
    <div class="sc-drnuxz vertical-timeline-element">
      <div id
           class="vertical-timeline-element"
      >
        <span class="vertical-timeline-element-icon bounce-in"
              style="background: rgb(46, 155, 38); color: rgb(255, 255, 255);"
        >
          <img alt
               loading="lazy"
               width="46"
               height="42"
               decoding="async"
               data-nimg="1"
               class="sc-hDcvty gtuqAY"
               srcset="/static/media/entities/assets/jagex-logo.svg?w=48&amp;q=75 1x, /static/media/entities/assets/jagex-logo.svg?w=96&amp;q=75 2x"
               src="/static/media/entities/assets/jagex-logo.svg?w=96&amp;q=75"
               style="color: transparent;"
          >
        </span>
        <div class="vertical-timeline-element-content bounce-in"
             style="background: rgb(46, 155, 38); color: rgb(255, 255, 255);"
        >
          <div class="vertical-timeline-element-content-arrow"
               style="border-right: 0.5rem solid rgb(46, 155, 38);"
          >
          </div>
          abc
          <span class="vertical-timeline-element-date">
            2011 - present
          </span>
        </div>
      </div>
    </div>
    <div class="sc-drnuxz vertical-timeline-element">
      <div id
           class="vertical-timeline-element"
      >
        <span class="vertical-timeline-element-icon bounce-in"
              style="background: rgb(46, 155, 38); color: rgb(255, 255, 255);"
        >
          <img alt
               loading="lazy"
               width="46"
               height="42"
               decoding="async"
               data-nimg="1"
               class="sc-hDcvty gtuqAY"
               srcset="/static/media/entities/assets/jagex-logo.svg?w=48&amp;q=75 1x, /static/media/entities/assets/jagex-logo.svg?w=96&amp;q=75 2x"
               src="/static/media/entities/assets/jagex-logo.svg?w=96&amp;q=75"
               style="color: transparent;"
          >
        </span>
        <div class="vertical-timeline-element-content bounce-in"
             style="background: rgb(46, 155, 38); color: rgb(255, 255, 255);"
        >
          <div class="vertical-timeline-element-content-arrow"
               style="border-right: 0.5rem solid rgb(46, 155, 38);"
          >
          </div>
          abc
          <span class="vertical-timeline-element-date">
            2011
          </span>
        </div>
      </div>
    </div>
    <div class="sc-drnuxz vertical-timeline-element">
      <div id
           class="vertical-timeline-element"
      >
        <span class="vertical-timeline-element-icon bounce-in"
              style="background: rgb(46, 155, 38); color: rgb(255, 255, 255);"
        >
          <img alt
               loading="lazy"
               width="46"
               height="42"
               decoding="async"
               data-nimg="1"
               class="sc-hDcvty gtuqAY"
               srcset="/static/media/entities/assets/jagex-logo.svg?w=48&amp;q=75 1x, /static/media/entities/assets/jagex-logo.svg?w=96&amp;q=75 2x"
               src="/static/media/entities/assets/jagex-logo.svg?w=96&amp;q=75"
               style="color: transparent;"
          >
        </span>
        <div class="vertical-timeline-element-content bounce-in"
             style="background: rgb(46, 155, 38); color: rgb(255, 255, 255);"
        >
          <div class="vertical-timeline-element-content-arrow"
               style="border-right: 0.5rem solid rgb(46, 155, 38);"
          >
          </div>
          abc
          <span class="vertical-timeline-element-date">
            2011
          </span>
        </div>
      </div>
    </div>
  </div>
</section>
`;
